Added options classes, refactor hosted services

--- a/WSMSimulator/WSMSimulator/appsettings.json
+++ b/WSMSimulator/WSMSimulator/appsettings.json
@@ -6,7 +6,26 @@
     }
   },
   "AllowedHosts": "*",
-  "Urls": "https://localhost:7050,http://localhost:5050",
+  "WaterPumpUsage": {
+    "DueTime": 0,
+    "Period": 15,
+    "Mean": 100,
+    "StdDev": 50
+  },
+  "WaterUsage": {
+    "DueTime": 0,
+    "Period": 15,
+    "Mean": 10,
+    "StdDev": 5
+  },
+  "ChemicalUsage": {
+    "DueTime": 0,
+    "Period": 15,
+    "Mean": 1,
+    "StdDev": 0.5,
+    "Min": 0.01
+  },
+  "Urls": "https://localhost:7050;http://localhost:5050",
   "MongoDB": {
     "ConnectionString": "mongodb+srv://asp-net-core-app:06otBKTPa0UrZqfu@cluster0.cnppt.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "watersupply",
